core/codegen/tests/ui-fail-stable/route-attribute-general-syntax.stderr
error: missing expected parameter: `uri`
 --> tests/ui-fail-stable/route-attribute-general-syntax.rs:4:1
  |
4 | #[get()]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `fn`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39m#[get] can only be used on functions␛[0m
 --> tests/ui-fail-stable/route-attribute-general-syntax.rs:9:1
  |
9 | struct S;
  | ^^^^^^

error: expected `fn`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39m#[get] can only be used on functions␛[0m
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:12:1
   |
12 | enum A {  }
   | ^^^^

error: expected `fn`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39m#[get] can only be used on functions␛[0m
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:15:1
   |
15 | trait Foo {  }
   | ^^^^^

error: expected `fn`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39m#[get] can only be used on functions␛[0m
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:18:1
   |
18 | impl S {  }
   | ^^^^

error: expected key/value `key = value`
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:21:12
   |
21 | #[get("/", 123)]
   |            ^^^

error: expected key/value `key = value`
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:24:12
   |
24 | #[get("/", "/")]
   |            ^^^

error: unexpected keyed parameter: expected literal or identifier
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:27:7
   |
27 | #[get(data = "<foo>", "/")]
   |       ^^^^^^^^^^^^^^

error: unexpected attribute parameter: `unknown`
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:30:12
   |
30 | #[get("/", unknown = "foo")]
   |            ^^^^^^^^^^^^^^^

error: expected key/value `key = value`
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:33:12
   |
33 | #[get("/", ...)]
   |            ^^^

error: handler arguments must be named
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mto name an ignored handler argument, use `_name`␛[0m
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:39:7
   |
39 | fn c1(_: usize) {}
   |       ^^^^^^^^

error: invalid value: expected string literal
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:43:7
   |
43 | #[get(100)]
   |       ^^^

error: invalid value: expected string literal
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:46:7
   |
46 | #[get('/')]
   |       ^^^

error: invalid value: expected integer literal
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:49:19
   |
49 | #[get("/", rank = "1")]
   |                   ^^^

error: invalid value: expected integer literal
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:52:19
   |
52 | #[get("/", rank = '1')]
   |                   ^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:57:21
   |
57 | #[get("/", format = "applicationx-custom")]
   |                     ^^^^^^^^^^^^^^^^^^^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:60:21
   |
60 | #[get("/", format = "")]
   |                     ^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:63:21
   |
63 | #[get("/", format = "//")]
   |                     ^^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:66:21
   |
66 | #[get("/", format = "/")]
   |                     ^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:69:21
   |
69 | #[get("/", format = "a/")]
   |                     ^^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:72:21
   |
72 | #[get("/", format = "/a")]
   |                     ^^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:75:21
   |
75 | #[get("/", format = "/a/")]
   |                     ^^^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:78:21
   |
78 | #[get("/", format = "a/b/")]
   |                     ^^^^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:81:21
   |
81 | #[get("/", format = "unknown")]
   |                     ^^^^^^^^^

error: invalid value: expected string literal
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:84:21
   |
84 | #[get("/", format = 12)]
   |                     ^^

error: invalid value: expected string literal
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:87:21
   |
87 | #[get("/", format = 'j')]
   |                     ^^^

error: invalid or unknown media type
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:90:21
   |
90 | #[get("/", format = "text//foo")]
   |                     ^^^^^^^^^^^

error: expected literal, found bare path "CONNECT"
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:95:9
   |
95 | #[route(CONNECT, "/")]
   |         ^^^^^^^

error: expected literal, found bare path "FIX"
  --> tests/ui-fail-stable/route-attribute-general-syntax.rs:98:9
   |
98 | #[route(FIX, "/")]
   |         ^^^

error: invalid route URI: expected token '/' but found 'h' at index 0
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mexpected URI in origin form: "/path/<param>"␛[0m
   --> tests/ui-fail-stable/route-attribute-general-syntax.rs:101:10
    |
101 | #[route("hi", "/")]
    |          ^

error: invalid route URI: expected token '/' but found 'G' at index 0
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mexpected URI in origin form: "/path/<param>"␛[0m
   --> tests/ui-fail-stable/route-attribute-general-syntax.rs:104:10
    |
104 | #[route("GET", "/")]
    |          ^

error: invalid value: expected string literal
   --> tests/ui-fail-stable/route-attribute-general-syntax.rs:107:9
    |
107 | #[route(120, "/")]
    |         ^^^
